tests/asm-link/strfmt/rgbasm.err
error: a numeric expression cannot be formatted as string
    ╭─[ test.asm:16:14 ]
    │
 16 │ PRINT STRFMT(#TEMPLATE, "void", 0, "extra")
    │              ────┬────  
    │                  ╰────── bad format specifier 7 bytes into this format string
────╯
error: not all arguments were used by the format string
    ╭─[ test.asm:16:14 ]
    │
 16 │ PRINT STRFMT(#TEMPLATE, "void", 0, "extra")
    │              ────┬────  
    │                  ╰────── 1 argument remains unformatted
────╯
error: missing print type
    ╭─[ test.asm:24:16 ]
    │
 24 │ PRINTLN STRFMT("%d eol %", 1)
    │                ─────┬────  
    │                     ╰────── bad format specifier 7 bytes into this format string
────╯
error: unexpected character 'w' as a print type
    ╭─[ test.asm:26:16 ]
    │
 26 │ PRINTLN STRFMT("invalid %w spec", 42)
    │                ────────┬────────  
    │                        ╰────────── bad format specifier 8 bytes into this format string
────╯
error: not enough arguments for the format string
    ╭─[ test.asm:28:16 ]
    │
 28 │ PRINTLN STRFMT("one=%d two=%d three=%d", 1)
    │                ────────────┬───────────  
    │                            ╰───────────── 1 argument was supplied, 2 more are missing
────╯
5 errors generated.
